--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asn1crypto==1.0.1
 attrs==19.2.0
 Automat==0.7.0
+certifi==2019.9.11
 cffi==1.12.3
+chardet==3.0.4
 configparser==4.0.2
 constantly==15.1.0
 cryptography==2.7
@@ -19,9 +21,11 @@ PyHamcrest==1.9.0
 PyMySQL==0.9.3
 pyOpenSSL==19.0.0
 queuelib==1.5.0
+requests==2.22.0
 Scrapy==1.7.3
 service-identity==18.1.0
 six==1.12.0
 Twisted==19.7.0
+urllib3==1.25.7
 w3lib==1.21.0
 zope.interface==4.6.0
