修改数据库配置

--- a/config/db.ini
+++ b/config/db.ini
@@ -2,6 +2,7 @@
 ;db_host = localhost
 db_host = 47.240.39.15
 db_port = 3306
-db_user = root
+;db_user = root
+db_user = etb
 db_pwd = chen19920328
 db_database= easy_taobao
