--- a/config/db.ini
+++ b/config/db.ini
@@ -1,8 +1,8 @@
 [db]
-;db_host = localhost
-db_host = 47.240.39.15
+db_host = localhost
+;db_host = 47.240.39.15
 db_port = 3306
-;db_user = root
-db_user = etb
+db_user = root
+;db_user = etb
 db_pwd = chen19920328
 db_database= easy_taobao
