修改代理提供商

--- a/config/proxy.ini
+++ b/config/proxy.ini
@@ -1,5 +1,10 @@
 [proxy]
 url = http://http.tiqu.alicdns.com/getip3?num=1&type=1&pro=&city=0&yys=0&port=1&time=1&ts=0&ys=0&cs=0&lb=1&sb=0&pb=4&mr=1&regions=&gm=4
-ip = 58.218.214.148:8351
-get_ip_time = 2019-11-24 21:33:13
+ip = 183.129.244.16:53952
+get_ip_time = 2020-01-10 18:16:57
+
+[proxy_fy]
+url = http://183.129.244.16:88/open?user_name=a501986411tp1&timestamp=1578638998&md5=8244BC97CFBF467BAEDE6F623960B275&pattern=json&number=1
+ip = 183.129.244.16:52245
+get_ip_time = 2020-01-10 18:17:33
 
